eks/manifests/base/service-db-mcp-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-mcp-server-service
  namespace: postgres-mcp
  labels:
    app: db-mcp-server
    app.kubernetes.io/name: db-mcp-server
    app.kubernetes.io/part-of: topmate-mcp
spec:
  type: ClusterIP
  selector:
    app: db-mcp-server
  ports:
    - port: 80
      targetPort: 9000
      protocol: TCP
